# facetracknoir-posix

./: .gitignore  CMakeLists.txt  README.txt  build-msvc2005.bat  build-msvc2008.bat  compile-msvc.bat  compile-msvc80.bat  facetracknoir-posix.kdev4  last-snapshot.rev  upload-snapshot.sh
.kdev4/: facetracknoir-posix.kdev4
cmake/: FindQxt.cmake
compat/: compat.cpp  compat.h
faceapi/: main.cpp  mutex.h  stdafx.h  utils.h
facetracknoir/: facetracknoir.cpp  facetracknoir.h  facetracknoir.rc  facetracknoir.ui  ftnoir_curves.ui  ftnoir_fsuipccontrols.ui  ftnoir_ftnservercontrols.ui  ftnoir_keyboardshortcuts.ui  ftnoir_preferences.ui  global-settings.cpp  global-settings.h  global-shortcuts.cpp  main-facetracknoir.qrc  main.cpp  postbuild.bat  readme.txt  readme_update_20100615.txt  readme_update_20100716.txt  readme_update_20100822.txt  resource.h  rotation.cpp  rotation.h  tracker.cpp  tracker.h  tracker_types.cpp  tracker_types.h
ftnoir_filter_accela/: ftnoir_accela_filtercontrols.ui  ftnoir_filter_accela.cpp  ftnoir_filter_accela.h  ftnoir_filter_accela_dialog.cpp  ftnoir_filter_accela_dll.cpp
ftnoir_filter_base/: ftnoir_filter_base.h
ftnoir_filter_ewma2/: ftnoir_filter_ewma2.cpp  ftnoir_filter_ewma2.h  ftnoir_filter_ewma2_dialog.cpp  ftnoir_filter_ewma_dll.cpp  ftnoir_filtercontrols.ui
ftnoir_filter_kalman/: ftnoir_filter_kalman.h  ftnoir_kalman_filtercontrols.ui  kalman.cpp
ftnoir_posewidget/: glwidget.cpp  glwidget.h
ftnoir_protocol_base/: ftnoir_protocol_base.h
ftnoir_protocol_fg/: fg-protocol.qrc  fgtypes.h  ftnoir_fgcontrols.ui  ftnoir_protocol_fg.cpp  ftnoir_protocol_fg.h  ftnoir_protocol_fg_dialog.cpp  ftnoir_protocol_fg_dll.cpp
ftnoir_protocol_fsuipc/: fsuipc-protocol.qrc  ftnoir_fsuipccontrols.ui  ftnoir_protocol_fsuipc.cpp  ftnoir_protocol_fsuipc.h  ftnoir_protocol_fsuipc_dialog.cpp  ftnoir_protocol_fsuipc_dll.cpp
ftnoir_protocol_ft/: ft-protocol.qrc  ftnoir_ftcontrols.ui  ftnoir_protocol_ft.cpp  ftnoir_protocol_ft.h  ftnoir_protocol_ft_dialog.cpp  ftnoir_protocol_ft_dll.cpp  fttypes.h
ftnoir_protocol_ftir/: ftir-protocol.qrc  ftirtypes.h  ftnoir_ftircontrols.ui  ftnoir_protocol_ftir.cpp  ftnoir_protocol_ftir.h  ftnoir_protocol_ftir_dialog.cpp  ftnoir_protocol_ftir_dll.cpp
ftnoir_protocol_ftn/: ftn-protocol.qrc  ftnoir_ftncontrols.ui  ftnoir_protocol_ftn.cpp  ftnoir_protocol_ftn.h  ftnoir_protocol_ftn_dialog.cpp  ftnoir_protocol_ftn_dll.cpp
ftnoir_protocol_mouse/: ftnoir_mousecontrols.ui  ftnoir_protocol_mouse.cpp  ftnoir_protocol_mouse.h  ftnoir_protocol_mouse_dialog.cpp  ftnoir_protocol_mouse_dll.cpp  win32-mouse-protocol.qrc
ftnoir_protocol_sc/: ftnoir_protocol_sc.cpp  ftnoir_protocol_sc.h  ftnoir_protocol_sc_dialog.cpp  ftnoir_protocol_sc_dll.cpp  ftnoir_sccontrols.ui  sc-protocol.qrc
ftnoir_protocol_wine/: ftnoir-wrapper-wine-main.cxx  ftnoir-wrapper-wine-windows.cxx  ftnoir_protocol_wine.cpp  ftnoir_protocol_wine.h  ftnoir_protocol_wine_dialog.cpp  ftnoir_protocol_wine_dll.cpp  ftnoir_winecontrols.ui  fttypes.h  wine-protocol.qrc
ftnoir_tracker_base/: ftnoir_tracker_base.h  ftnoir_tracker_sm_types.h  ftnoir_tracker_types.h
ftnoir_tracker_ht/: ftnoir_tracker_ht.cpp  ftnoir_tracker_ht.h  ht-tracker.qrc  video_widget.cpp  video_widget.h
ftnoir_tracker_pt/: camera.cpp  camera.h  ftnoir_pt_controls.ui  ftnoir_tracker_pt.cpp  ftnoir_tracker_pt.h  ftnoir_tracker_pt.qrc  ftnoir_tracker_pt_dialog.cpp  ftnoir_tracker_pt_dialog.h  ftnoir_tracker_pt_dll.cpp  ftnoir_tracker_pt_dll.h  ftnoir_tracker_pt_settings.cpp  point_extractor.cpp  point_tracker.h  video_widget.cpp  video_widget.h
ftnoir_tracker_sm/: ftnoir_sm_controls.ui  ftnoir_tracker_faceapi.cpp  ftnoir_tracker_faceapi_dialog.cpp  ftnoir_tracker_faceapi_dll.cpp  ftnoir_tracker_sm.h  sm-tracker.qrc  tracker.qrc
ftnoir_tracker_udp/: ftnoir_ftnclientcontrols.ui  ftnoir_tracker_udp.cpp  ftnoir_tracker_udp.h  ftnoir_tracker_udp_dialog.cpp  ftnoir_tracker_udp_dll.cpp
qfunctionconfigurator/: functionconfig.cpp  functionconfig.h  qfunctionconfigurator.cpp  qfunctionconfigurator.h  qfunctionconfiguratorplugin.cpp  qfunctionconfiguratorplugin.h
x-plane-plugin/: plugin.c  plugin.cpp
